--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -38,5 +38,11 @@
     "next": "^12.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "dependencies": {
+    "@clutchd/component": "^0.6.0",
+    "@clutchd/protect": "^0.5.0",
+    "@clutchd/skeleton": "^0.3.0",
+    "clsx": "^1.2.1"
   }
 }
