--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -36,6 +36,7 @@
   },
   "peerDependencies": {
     "next": "^12.1.0",
+    "next-auth": "^4.10.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
