--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clutchd/layout": "^0.9.0",
+    "@clutchd/text": "^0.2.0",
     "autoprefixer": "^10.4.8",
     "next": "^12.2.5",
     "postcss": "^8.4.16",
