--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -41,9 +41,10 @@
     "react-dom": "^18.1.0"
   },
   "dependencies": {
+    "@clutchd/clsx": "0.1.0",
     "@clutchd/component": "^0.6.0",
     "@clutchd/protect": "^0.5.0",
     "@clutchd/skeleton": "^0.4.0",
-    "clsx": "^1.2.1"
+    "@clutchd/tailwind": "0.1.1"
   }
 }
