--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@clutchd/component": "^0.6.0",
+    "@clutchd/flex": "0.1.0",
     "@clutchd/clsx": "0.1.0"
   }
 }
