--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "turbo run lint",
     "test": "turbo run test",
     "clean": "turbo run clean && rm -rf .next .turbo node_modules coverage package-lock.json",
-    "format": "prettier --write \"**/*.{js,json,jsx,ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{js,json,jsx,ts,tsx,md,mdx}\"",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "turbo run build && changeset publish"
