--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -20,10 +20,6 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "eslint": "^8.22.0",
-    "eslint-config-next": "12.2.5",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "prettier": "^2.7.1"
   }
 }
