--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev --no-cache --parallel --continue",
-    "lint": "turbo run lint",
-    "test": "turbo run test",
-    "clean": "turbo run clean && rm -rf .next .turbo node_modules coverage package-lock.json",
-    "format": "prettier --write \"**/*.{js,json,jsx,ts,tsx,md,mdx}\"",
     "changeset": "changeset",
-    "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish"
+    "clean": "turbo run clean && rm -rf .next .turbo node_modules coverage package-lock.json",
+    "dev": "turbo run dev --no-cache --parallel --continue",
+    "format": "prettier --write \"**/*.{js,json,jsx,ts,tsx,md,mdx}\"",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
+    "release": "turbo run build && changeset publish",
+    "test": "turbo run test",
+    "version-packages": "changeset version"
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
     "prettier": "^2.5.1",
     "turbo": "latest"
+  },
+  "dependencies": {
+    "@clutchd/config": "^0.1.1",
+    "eslint-config-next": "^12.3.1",
+    "eslint-config-prettier": "^8.5.0"
   }
 }
