--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@clutchd/layout": "^0.11.1",
     "@clutchd/text": "^0.3.8",
-    "autoprefixer": "^10.4.8",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "prettier": "^2.7.1"
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.1"
   }
 }
