--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -18,6 +18,9 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "prettier": "^2.7.1"
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.1"
   }
 }
