--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -16,7 +16,10 @@
     "test": "jest --passWithNoTests"
   },
   "devDependencies": {
+    "@clutchd/clsx": "0.1.1",
+    "@clutchd/component": "^0.7.0",
     "@clutchd/config": "*",
+    "@clutchd/tailwind": "0.5.0",
     "postcss": "^8.4.16",
     "react": "^18.1.0",
     "ts-jest": "^28.0.5",
