--- a/packages/skeleton/tsconfig.json
+++ b/packages/skeleton/tsconfig.json
@@ -1,5 +1,3 @@
 {
-  "extends": "@clutchd/tsconfig/react-library.json",
-  "include": ["."],
-  "exclude": ["dist", "build", "node_modules"]
+  "extends": "@clutchd/tsconfig/react-library.json"
 }
