--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/is-empty": "^1.1.2",
     "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
