--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -15,8 +15,16 @@
     "prepublish": "npm run build",
     "test": "jest --passWithNoTests"
   },
+  "dependencies": {
+    "@clutchd/component": "^0.7.2",
+    "@clutchd/clsx": "0.1.2",
+    "@clutchd/is-empty": "^1.1.2",
+    "@clutchd/text": "^0.3.15"
+  },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/tailwind": "0.7.1",
+    "@clutchd/tsconfig": "*",
     "@types/jest": "^29.2.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.9",
@@ -32,12 +40,5 @@
     "next": "^13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "dependencies": {
-    "@clutchd/component": "^0.7.2",
-    "@clutchd/clsx": "0.1.2",
-    "@clutchd/is-empty": "^1.1.2",
-    "@clutchd/tailwind": "0.7.1",
-    "@clutchd/text": "^0.3.15"
   }
 }
