--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -15,8 +15,14 @@
     "prepublish": "npm run build",
     "test": "jest --passWithNoTests"
   },
+  "dependencies": {
+    "@clutchd/component": "^0.7.2",
+    "@clutchd/clsx": "0.1.2"
+  },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/tailwind": "0.7.1",
+    "@clutchd/tsconfig": "*",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "jest": "^29.3.1",
@@ -30,10 +36,5 @@
     "next": "^13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "dependencies": {
-    "@clutchd/tailwind": "0.7.1",
-    "@clutchd/component": "^0.7.2",
-    "@clutchd/clsx": "0.1.2"
   }
 }
