--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -17,11 +17,12 @@
   },
   "dependencies": {
     "@clutchd/clsx": "0.1.2",
-    "@clutchd/component": "^0.7.2",
-    "@clutchd/tailwind": "0.7.1"
+    "@clutchd/component": "^0.7.2"
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/tailwind": "0.7.1",
+    "@clutchd/tsconfig": "*",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "jest": "^29.3.1",
