--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -15,8 +15,16 @@
     "prepublish": "npm run build",
     "test": "jest --passWithNoTests"
   },
+  "dependencies": {
+    "@clutchd/clsx": "0.1.2",
+    "@clutchd/component": "^0.7.2",
+    "@clutchd/protect": "^0.5.3",
+    "@clutchd/skeleton": "^0.4.5"
+  },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/tailwind": "0.7.1",
+    "@clutchd/tsconfig": "*",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "jest": "^29.3.1",
@@ -32,12 +40,5 @@
     "next-auth": "^4.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "dependencies": {
-    "@clutchd/clsx": "0.1.2",
-    "@clutchd/component": "^0.7.2",
-    "@clutchd/protect": "^0.5.3",
-    "@clutchd/skeleton": "^0.4.5",
-    "@clutchd/tailwind": "0.7.1"
   }
 }
