--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/tailwind": "*",
+    "@clutchd/tailwind": "^0.8.0",
     "@clutchd/tsconfig": "*",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.9",
