--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -14,6 +14,7 @@
     "@clutchd/copyright": "*",
     "@clutchd/divider": "*",
     "@clutchd/flex": "*",
+    "@clutchd/input": "*",
     "@clutchd/layout": "*",
     "@clutchd/link": "*",
     "@clutchd/text": "*",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@clutchd/config": "*",
     "@clutchd/tailwind": "*",
-    "@clutchd/tsconfig": "*",
+    "@clutchd/tsconfig": "^1.0.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "typescript": "^4.8.4"
