--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -23,6 +23,7 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "^13.1.2",
     "next": "^13.1.2",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
