--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@clutchd/tsconfig",
   "version": "1.0.0",
+  "description": "Collection of tsconfigs shared between clutchd/apps and clutchd/packages.",
   "keywords": [
     "clutchd",
     "tsconfig"
