--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -32,9 +32,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "^1.0.2",
     "@clutchd/component": "^1.0.2",
-    "@clutchd/is-empty": "^2.0.4"
+    "@clutchd/is-empty": "^2.0.4",
+    "@clutchd/twx": "^1.0.0"
   },
   "devDependencies": {
     "@clutchd/config": "*",
