--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -34,10 +34,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "^1.0.2",
     "@clutchd/component": "^1.0.2",
     "@clutchd/compose-event-handlers": "^1.0.3",
-    "@clutchd/is-empty": "^2.0.4"
+    "@clutchd/is-empty": "^2.0.4",
+    "@clutchd/twx": "^1.0.0"
   },
   "devDependencies": {
     "@clutchd/config": "*",
