--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@clutchd/twx",
   "version": "1.0.0",
-  "description": "Combining the powers of @clutchd/clsx and @clutchd/tw-merge.",
+  "description": "Combining the powers of @clutchd/clsx and tailwind-merge.",
   "keywords": [
     "clutchd",
     "clsx",
-    "twMerge",
+    "twx",
     "tailwind"
   ],
   "bugs": {
@@ -33,8 +33,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "^1.0.2",
-    "tailwind-merge": "^1.9.0"
+    "@clutchd/clsx": "^1.0.2"
   },
   "devDependencies": {
     "@clutchd/config": "*",
