--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -36,6 +36,7 @@
     "@clutchd/eslint-config-clutchd": "^1.0.0",
     "@types/react": "^18.0.26",
     "jest": "^29.3.1",
+    "next": "^13.1.2",
     "next-auth": "^4.18.6",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
@@ -44,6 +45,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
+    "next": "^13.1.2",
     "next-auth": "^4.18.6",
     "react": "^18.2.0"
   }
