--- a/.github/workflows/turbotest.yml
+++ b/.github/workflows/turbotest.yml
@@ -26,13 +26,13 @@ jobs:
 
       - name: Upload Code Coverage
         uses: codecov/codecov-action@v3
-        if: ${{ !cancelled() }}
+        if: ${{ github.ref == 'refs/heads/main' && !cancelled() }}
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: "**/clover.xml"
 
       - name: Create Release Pull Request or Publish to npm
-        if: ${{ github.ref == 'refs/heads/main' }} && ${{ !cancelled() }}
+        if: ${{ github.ref == 'refs/heads/main' && !cancelled() }}
         id: changesets
         uses: changesets/action@v1
         with:
