--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -32,13 +32,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "^1.1.0",
-    "@clutchd/twx": "^1.0.0"
+    "@clutchd/component": "^1.1.0"
   },
   "devDependencies": {
     "@clutchd/config": "*",
     "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "@clutchd/tailwind": "^2.0.0",
     "jest": "^29.3.1",
     "next": "^13.1.2",
     "postcss": "^8.4.20",
