--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
       "cache": false
     },
     "test": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["build"],
       "outputs": ["coverage/**"]
     }
   }
