--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -13,6 +13,7 @@
     "@clutchd/block": "*",
     "@clutchd/button": "*",
     "@clutchd/card": "*",
+    "@clutchd/config": "*",
     "@clutchd/copyright": "*",
     "@clutchd/divider": "*",
     "@clutchd/flex": "*",
@@ -21,20 +22,21 @@
     "@clutchd/label": "*",
     "@clutchd/layout": "*",
     "@clutchd/link": "*",
-    "@clutchd/text": "*",
-    "@heroicons/react": "^2.0.15",
-    "@next/font": "^13.4.2",
-    "next": "^13.4.2",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@clutchd/config": "*",
     "@clutchd/tailwind": "*",
-    "@clutchd/tsconfig": "^1.0.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "typescript": "^5.0.4"
+    "@clutchd/text": "*",
+    "@clutchd/tsconfig": "1.0.1",
+    "@heroicons/react": "2.0.15",
+    "@next/font": "13.4.2",
+    "@types/node": "20.1.4",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "next": "13.4.2",
+    "next-themes": "0.2.1",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   }
 }
