--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -25,9 +25,6 @@
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.1"
+    "@clutchd/eslint-config-clutchd": "1.1.0"
   }
 }
