--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -9,22 +9,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clutchd/config": "*",
     "@clutchd/copyright": "*",
     "@clutchd/flex": "*",
     "@clutchd/layout": "*",
     "@clutchd/link": "*",
-    "@clutchd/text": "*",
-    "@next/font": "^13.4.2",
-    "next": "^13.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@clutchd/config": "*",
     "@clutchd/tailwind": "*",
-    "@clutchd/tsconfig": "^1.0.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "typescript": "^5.0.4"
+    "@clutchd/text": "*",
+    "@clutchd/tsconfig": "1.0.1",
+    "@next/font": "13.4.2",
+    "@types/node": "20.1.4",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "next": "13.4.2",
+    "next-themes": "0.2.1",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   }
 }
