--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@clutchd/ui-redesign",
-  "version": "0.0.0",
+  "name": "@clutchd/ui",
+  "version": "0.7.0",
   "private": true,
   "scripts": {
     "build": "next build",
