--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/**/*"
   ],
   "scripts": {
     "benchmark": "turbo run benchmark --concurrency=1",
