--- a/packages/ui/component/package.json
+++ b/packages/ui/component/package.json
@@ -32,8 +32,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/compose-props": "1.1.4",
-    "@clutchd/compose-refs": "1.1.0"
+    "@clutchd/slot": "1.0.0"
   },
   "devDependencies": {
     "@clutchd/config": "1.0.3",
