--- a/packages/utils/bundlejs/package.json
+++ b/packages/utils/bundlejs/package.json
@@ -31,12 +31,11 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.3",
     "@clutchd/eslint-config-clutchd": "1.1.1",
     "@clutchd/tsconfig": "1.0.1",
-    "@types/node": "20.2.5",
+    "@types/node-fetch": "^2.6.4",
     "jest": "29.3.1",
-    "ts-jest": "29.0.3",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
