--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,5 @@
 {
   "pipeline": {
-    "benchmark": {
-      "dependsOn": ["build"]
-    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**"]
@@ -18,7 +15,7 @@
       "cache": false
     },
     "test": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["build"],
       "outputs": ["coverage/**"]
     }
   }
