--- a/packages/ui/compose-refs/package.json
+++ b/packages/ui/compose-refs/package.json
@@ -33,9 +33,15 @@
   "devDependencies": {
     "@clutchd/config": "1.0.3",
     "@clutchd/eslint-config-clutchd": "1.1.1",
+    "@testing-library/react": "13.2.0",
+    "@types/react": "18.2.7",
     "jest": "29.3.1",
+    "react": "18.2.0",
     "ts-jest": "29.0.3",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
+  },
+  "peerDependencies": {
+    "react": "18.2.0"
   }
 }
