--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@clutchd/config",
-  "version": "1.1.1",
+  "name": "@clutchd/jest",
+  "version": "0.0.1",
   "keywords": [
     "clutchd",
     "config",
-    "tailwind"
+    "jest",
+    "ts-jest"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -17,12 +18,19 @@
   "author": "Clutchd, LLC",
   "main": "index.js",
   "files": [
-    "*.config.js"
+    "*.config.js",
+    "jsdom.cjs"
   ],
   "scripts": {
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@clutchd/eslint-config-clutchd": "1.1.1"
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.0.3",
+    "ts-jest": "29.0.3"
+  },
+  "devDependencies": {
+    "@clutchd/eslint-config-clutchd": "1.1.1",
+    "@types/jest": "29.5.2"
   }
 }
