--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -35,16 +35,12 @@
     "@clutchd/text": "2.1.3"
   },
   "devDependencies": {
-    "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
+    "@clutchd/jest": "*",
     "@clutchd/tsconfig": "1.0.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@types/jest": "29.5.2",
-    "jest": "29.3.1",
     "next": "13.4.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
-    "ts-jest": "29.0.3",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
