--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -25,6 +25,7 @@
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "5.16.5",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.0.3",
     "ts-jest": "29.0.3"
