--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -32,17 +32,13 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@types/jest": "29.5.2",
+    "@clutchd/jest": "*",
     "@types/react": "18.2.7",
-    "jest": "29.3.1",
     "next": "13.4.6",
     "next-auth": "4.18.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
-    "ts-jest": "29.0.3",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
