--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -36,16 +36,11 @@
     "@clutchd/twx": "1.1.1"
   },
   "devDependencies": {
-    "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.2.0",
-    "@types/jest": "29.5.2",
-    "jest": "29.3.1",
+    "@clutchd/jest": "*",
     "next-auth": "4.18.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
-    "ts-jest": "29.0.3",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
