--- a/packages/ui/compose-props/package.json
+++ b/packages/ui/compose-props/package.json
@@ -35,12 +35,8 @@
     "@clutchd/compose-event-handlers": "1.0.4"
   },
   "devDependencies": {
-    "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@types/jest": "29.5.2",
-    "jest": "29.3.1",
-    "ts-jest": "29.0.3",
+    "@clutchd/jest": "*",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   }
