--- a/packages/ui/compose-refs/package.json
+++ b/packages/ui/compose-refs/package.json
@@ -31,15 +31,10 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.2.0",
-    "@types/jest": "29.5.2",
+    "@clutchd/jest": "*",
     "@types/react": "18.2.7",
-    "jest": "29.3.1",
     "react": "18.2.0",
-    "ts-jest": "29.0.3",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
