--- a/packages/utils/bundlejs/package.json
+++ b/packages/utils/bundlejs/package.json
@@ -31,13 +31,10 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
+    "@clutchd/jest": "*",
     "@clutchd/tsconfig": "1.0.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@types/jest": "29.5.2",
     "@types/node-fetch": "^2.6.4",
-    "jest": "29.3.1",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
