--- a/packages/utils/clsx/package.json
+++ b/packages/utils/clsx/package.json
@@ -31,12 +31,9 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
+    "@clutchd/jest": "*",
     "@clutchd/tsconfig": "1.0.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@types/jest": "29.5.2",
-    "jest": "29.3.1",
     "node-fetch": "2.6.1",
     "terser": "5.16.1",
     "tsup": "6.7.0",
