--- a/packages/utils/get-initials/package.json
+++ b/packages/utils/get-initials/package.json
@@ -34,13 +34,9 @@
     "@clutchd/is-empty": "2.0.5"
   },
   "devDependencies": {
-    "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
+    "@clutchd/jest": "*",
     "@clutchd/tsconfig": "1.0.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@types/jest": "29.5.2",
-    "jest": "29.3.1",
-    "ts-jest": "29.0.3",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   }
