--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -27,11 +27,14 @@
   },
   "dependencies": {
     "@testing-library/jest-dom": "5.16.5",
-    "jest": "29.3.1",
     "jest-environment-jsdom": "29.0.3",
     "ts-jest": "29.0.3"
   },
   "devDependencies": {
-    "@types/jest": "29.5.2"
+    "@types/jest": "29.5.2",
+    "jest": "29.3.1"
+  },
+  "peerDependencies": {
+    "jest": "29.3.1"
   }
 }
