--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -40,6 +40,7 @@
     "@clutchd/tailwind": "2.0.2",
     "@clutchd/tsconfig": "1.1.0",
     "@types/react": "18.2.7",
+    "jest": "29.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "tsup": "6.7.0",
