--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -37,6 +37,7 @@
     "@clutchd/jest": "1.0.1",
     "@clutchd/tsconfig": "1.1.0",
     "@types/react": "18.2.7",
+    "jest": "29.3.1",
     "next": "13.4.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
