--- a/packages/next-auth-prisma-adapter/package.json
+++ b/packages/next-auth-prisma-adapter/package.json
@@ -35,6 +35,7 @@
     "@clutchd/tsconfig": "1.1.0",
     "@prisma/client": "4.9.0",
     "@types/react": "18.2.7",
+    "jest": "29.3.1",
     "next-auth": "4.18.6",
     "prisma": "4.16.0",
     "tsup": "6.7.0",
