--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -34,6 +34,7 @@
     "@clutchd/jest": "1.0.1",
     "@clutchd/tsconfig": "1.1.0",
     "@types/react": "18.2.7",
+    "jest": "29.3.1",
     "next": "13.4.6",
     "next-auth": "4.18.6",
     "postcss": "8.4.23",
