--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -37,7 +37,9 @@
   "devDependencies": {
     "@clutchd/jest": "1.0.1",
     "@clutchd/tsconfig": "1.1.0",
+    "@testing-library/react": "14.0.0",
     "@types/react": "18.2.7",
+    "jest": "29.3.1",
     "next-auth": "4.18.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
