--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@clutchd/jest": "1.0.1",
     "@clutchd/tsconfig": "1.1.0",
+    "jest": "29.3.1",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   }
