--- a/packages/ui/component/package.json
+++ b/packages/ui/component/package.json
@@ -36,6 +36,7 @@
     "@clutchd/jest": "1.0.1",
     "@testing-library/react": "14.0.0",
     "@types/react": "18.2.7",
+    "jest": "29.3.1",
     "react": "18.2.0",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
