--- a/packages/ui/compose-props/package.json
+++ b/packages/ui/compose-props/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.1",
+    "jest": "29.3.1",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   }
