--- a/packages/ui/compose-refs/package.json
+++ b/packages/ui/compose-refs/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@clutchd/jest": "1.0.1",
     "@types/react": "18.2.7",
+    "jest": "29.3.1",
     "react": "18.2.0",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
