--- a/packages/utils/bundlejs/package.json
+++ b/packages/utils/bundlejs/package.json
@@ -33,6 +33,7 @@
     "@clutchd/jest": "1.0.1",
     "@clutchd/tsconfig": "1.1.0",
     "@types/node-fetch": "^2.6.4",
+    "jest": "29.3.1",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
