--- a/packages/utils/clsx/package.json
+++ b/packages/utils/clsx/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@clutchd/jest": "1.0.1",
     "@clutchd/tsconfig": "1.1.0",
+    "jest": "29.3.1",
     "node-fetch": "2.6.1",
     "terser": "5.16.1",
     "tsup": "6.7.0",
