--- a/ui/component/package.json
+++ b/ui/component/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.2",
+    "@clutchd/tsconfig": "1.1.0",
     "@testing-library/react": "14.0.0",
     "@types/react": "18.2.7",
     "jest": "29.5.0",
