--- a/ui/compose-event-handlers/package.json
+++ b/ui/compose-event-handlers/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.2",
+    "@clutchd/tsconfig": "1.1.0",
     "jest": "29.5.0",
     "tsup": "6.7.0",
     "typescript": "5.1.3"
