--- a/ui/slot/package.json
+++ b/ui/slot/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.2",
+    "@clutchd/tsconfig": "1.1.0",
     "@types/react": "18.2.7",
     "jest": "29.5.0",
     "react": "18.2.0",
