--- a/ui/compose-refs/package.json
+++ b/ui/compose-refs/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.1.0",
+    "@testing-library/react": "14.0.0",
     "@types/react": "18.2.14",
     "jest": "29.5.0",
     "react": "18.2.0",
