--- a/ui/compose-event-handlers/package.json
+++ b/ui/compose-event-handlers/package.json
@@ -29,6 +29,9 @@
     "prepublish": "pnpm run build",
     "test": "jest"
   },
+  "dependencies": {
+    "@clutchd/merge-event-handlers": "1.0.0"
+  },
   "devDependencies": {
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.1.0",
