--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "turbo run build",
     "changeset": "changeset",
     "clean": "find . -type d \\( -name 'node_modules' -o -name '.turbo' \\) -prune -print -exec rm -rf '{}' \\;",
-    "dev": "turbo run dev --no-cache --parallel",
+    "dev": "turbo run dev",
     "preinstall": "npx only-allow pnpm",
     "format": "prettier --write \"**/*.{js,json,jsx,ts,tsx,md,mdx}\"",
     "postinstall": "manypkg check",
