--- a/packages/is-empty/package.json
+++ b/packages/is-empty/package.json
@@ -30,6 +30,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@clutchd/bundlejs": "0.1.2",
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.1.0",
     "jest": "29.5.0",
