--- a/packages/bundlejs/package.json
+++ b/packages/bundlejs/package.json
@@ -29,16 +29,18 @@
     "prepublish": "pnpm run build",
     "test": "jest"
   },
+  "dependencies": {
+    "@hazae41/foras": "2.0.8",
+    "node-fetch": "2.6.1"
+  },
   "devDependencies": {
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.1.0",
+    "@types/jest": "29.5.2",
+    "@types/node": "20.3.1",
     "@types/node-fetch": "2.6.4",
     "jest": "29.5.0",
     "tsup": "7.1.0",
     "typescript": "5.1.3"
-  },
-  "dependencies": {
-    "@hazae41/foras": "2.0.8",
-    "node-fetch": "2.6.1"
   }
 }
