--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -33,6 +33,8 @@
     "@clutchd/bundlejs": "0.1.2",
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.2.0",
+    "@types/jest": "29.5.2",
+    "@types/node": "20.3.1",
     "jest": "29.5.0",
     "node-fetch": "2.6.1",
     "tsup": "7.1.0",
