--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -39,7 +39,10 @@
     "@clutchd/jest": "1.0.2",
     "@clutchd/tailwind": "2.0.3",
     "@clutchd/tsconfig": "1.2.0",
+    "@types/jest": "29.5.2",
+    "@types/node": "20.3.1",
     "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "jest": "29.5.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
