--- a/packages/next-auth-prisma-adapter/package.json
+++ b/packages/next-auth-prisma-adapter/package.json
@@ -34,7 +34,10 @@
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.2.0",
     "@prisma/client": "4.9.0",
+    "@types/jest": "29.5.2",
+    "@types/node": "20.3.1",
     "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "jest": "29.5.0",
     "next-auth": "4.18.6",
     "prisma": "4.16.0",
