--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -33,7 +33,10 @@
   "devDependencies": {
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.2.0",
+    "@types/jest": "29.5.2",
+    "@types/node": "20.3.1",
     "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "jest": "29.5.0",
     "next": "13.4.7",
     "next-auth": "4.18.6",
